added price-border and gray colours

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -7,3 +7,5 @@ $white: #ffffff;
 /* background color descriptive variables */
 $dark-grey: #474b4d;
 $light-grey: #fafafa;
+$price-border: #d8d8d8;
+$gray: #989898;
