--- a/src/components/PremiumCardsList/PremiumCardsList.scss
+++ b/src/components/PremiumCardsList/PremiumCardsList.scss
@@ -18,7 +18,7 @@
       .checkmark {
         position: absolute;
         top: 8px;
-        right: 8px;
+        left: 8px;
         font-size: 20px;
         color: #4caf50; 
       }
