--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,7 +5,7 @@
 body {
   background: $white;
   color: $telus-black;
-  font-family: sans-serif;
+  font-family: "Inter", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -20,9 +20,12 @@ li {
   list-style: none;
   padding: 0;
 }
+button {
+  font-family: "Inter", sans-serif;
+  font-size: 1rem;
+}
 
 .container {
-  //if we want to have a aligned padding for all elements
   margin: 0 auto;
   padding: 0 1rem;
 
