--- a/src/components/PresetPacksDisplayButtons/PresetPacksDisplayButtons.scss
+++ b/src/components/PresetPacksDisplayButtons/PresetPacksDisplayButtons.scss
@@ -2,10 +2,26 @@
 .packs {
   display: flex;
   flex-direction: row;
+
   gap: 1rem;
   color: $telus-black;
+
   &-button {
+    text-align: center;
     padding: 0.25rem;
     background-color: $price-border;
+    cursor: pointer;
+    text-decoration: none;
+    color: inherit;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+    &-selected {
+      text-align: center;
+      padding: 0.25rem;
+      cursor: pointer;
+      border-radius: 4px;
+      background-color: $telus-green;
+      color: $white;
+    }
   }
 }
