--- a/src/components/PremiumCardsList/PremiumCardsList.scss
+++ b/src/components/PremiumCardsList/PremiumCardsList.scss
@@ -12,6 +12,9 @@
       background-color: lightgrey;
       position: relative;
       border: 2px solid transparent;
+      background-repeat: no-repeat;
+      background-size: 50%;
+      background-position: center;
       
 
   
