--- a/src/components/CategoryCardItem/CategoryCardItem.scss
+++ b/src/components/CategoryCardItem/CategoryCardItem.scss
@@ -3,7 +3,7 @@ $card-background-color: #fff;
 $checkbox-border-color: #ccc;
 $text-color-light: #777;
 $text-color-dark: #333;
-$price-background-color: #F7F7F8;
+$price-background-color: #f7f7f8;
 
 .category-card {
   border: 1px solid $card-border-color;
@@ -42,14 +42,17 @@ $price-background-color: #F7F7F8;
 
   &__icons {
     display: flex;
-    justify-content: space-between;
+    justify-content: baseline;
+    gap: 2rem;
+    align-items: center;
+    flex-wrap: wrap;
     margin-bottom: 16px;
-
-    &__icon {
-      width: 24px;
-      height: 24px;
-      object-fit: cover;
-    }
+  }
+  &__icon {
+    width: 3rem;
+    height: 3rem;
+    object-fit: contain;
+    vertical-align: middle;
   }
 
   &__channels {
