--- a/src/components/CategoryCardItem/CategoryCardItem.scss
+++ b/src/components/CategoryCardItem/CategoryCardItem.scss
@@ -42,6 +42,7 @@ $price-background-color: #f7f7f8;
 
   &__icons {
     display: flex;
+    flex-direction: row;
     justify-content: baseline;
     gap: 2rem;
     align-items: center;
@@ -55,7 +56,7 @@ $price-background-color: #f7f7f8;
     height: 100%;
   }
   &__icon {
-    width: 3rem;
+    max-width: 3rem;
     height: 3rem;
     object-fit: contain;
     vertical-align: middle;
