--- a/src/components/CategoryCardsList/CategoryCardsList.scss
+++ b/src/components/CategoryCardsList/CategoryCardsList.scss
@@ -1,19 +1,24 @@
+@import "../../styles/global.scss";
 .category-card-list {
-    display: flex;
-    flex-direction: column; 
-    gap: 16px; 
-    padding: 16px; 
-    max-width: 1200px; 
-    margin: 0 auto; 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 16px;
+  padding: 16px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.category-card-list__row {
+  display: grid;
+  justify-content: space-between;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+  @include tablet {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 1.52rem;
   }
-  
-  .category-card-list__row {
-    display: flex;
-    gap: 16px; 
+  @include desktop {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   }
-  
-  .category-card-list__row > * {
-    flex: 1; 
-    max-width: calc(25% - 16px); 
-    box-sizing: border-box; 
-  }
+}
