--- a/src/components/CategoryCardItem/CategoryCardItem.scss
+++ b/src/components/CategoryCardItem/CategoryCardItem.scss
@@ -1,72 +1,83 @@
-.channel-card {
+@import "../../styles/global.scss";
+
+$card-border-color: #ddd;
+$card-background-color: #fff;
+$checkbox-border-color: #ccc;
+$text-color-light: #777;
+$text-color-dark: #333;
+$price-background-color: #f7f7f8;
+
+.category-card {
+  border: 1px solid $card-border-color;
+  border-radius: 8px;
+  background-color: $card-background-color;
   display: flex;
   flex-direction: column;
-  width: 250px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  overflow: hidden;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
 
-.channel-card__header {
-  display: flex;
-  align-items: center;
-  padding: 16px;
-  border-bottom: 1px solid #ddd;
-}
+  &__content {
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+  }
 
-.channel-card__checkbox {
-  width: 20px;
-  height: 20px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  background-color: #fff;
-  margin-right: 16px;
-}
+  &__header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
+  }
 
-.channel-card__title {
-  margin: 0;
-  font-size: 16px;
-  font-weight: 600;
-}
+  &__checkbox {
+    width: 16px;
+    height: 16px;
+    border: 1px solid $checkbox-border-color;
+    background-color: $card-background-color;
+    margin-right: 8px;
+    border-radius: 2px;
+  }
 
-.channel-card__image-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 150px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
+  &__title {
+    font-size: 16px;
+    margin: 0;
+  }
 
-.channel-card__image {
-  width: 150px;
-  height: auto;
-  object-fit: cover;
-}
+  &__icons {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    align-items: center;
+    flex-wrap: wrap;
+    @include tablet {
+      margin: 0 auto;
+    }
+  }
+  &__icons-channels {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
+  &__icon {
+    max-width: 3rem;
+    height: 3rem;
+    object-fit: contain;
+    vertical-align: middle;
+  }
 
-.channel-card__footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0;
-  background-color: #f7f7f8;
-}
+  &__channels {
+    font-size: 14px;
+    margin: 0;
+    color: $text-color-light;
+  }
 
-.channel-card__details-link {
-  background: none;
-  border: none;
-  color: #007bff;
-  cursor: pointer;
-  font-size: 14px;
-  margin-right: auto;
-  padding: 16px;
-}
-
-.channel-card__price {
-  background-color: #f7f7f8;
-  padding: 8px 16px;
-  border-radius: 4px;
+  &__price {
+    font-size: 14px;
+    color: $text-color-dark;
+    text-align: right;
+    background-color: $price-background-color;
+    padding: 8px 16px;
+    border-radius: 0 0 8px 8px;
+    width: 100%;
+    box-sizing: border-box;
+  }
 }
