--- a/src/components/ChannelCardsList/ChannelCardsList.scss
+++ b/src/components/ChannelCardsList/ChannelCardsList.scss
@@ -1,8 +1,8 @@
 .channel-card-list {
     display: flex;
     flex-direction: column;
-    gap: 16px; 
-    padding: 16px; 
+    gap: 16px;
+    padding: 2rem 0 3rem;
     max-width: 1200px; 
     margin: 0 auto; 
   }
