--- a/src/components/CategoriesDropDown/CategoriesDropDown.scss
+++ b/src/components/CategoriesDropDown/CategoriesDropDown.scss
@@ -1,6 +1,7 @@
 @import "../../styles/global.scss";
 
 .dropdown {
+  height: fit-content;
   position: relative;
   width: 15rem;
   box-shadow: 0 4px 6px rgba($telus-black, 0.1);
