--- a/src/components/PremiumCardsList/PremiumCardsList.scss
+++ b/src/components/PremiumCardsList/PremiumCardsList.scss
@@ -1,31 +1,26 @@
+@import "../../styles/global.scss";
+
 .premium-cards-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 100%;
-    gap: 2rem;
-    
-    .card-placeholder {
-        flex: 1 0 30%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+  gap: 2rem;
 
-      height: 129px;
-      background-color: lightgrey;
-      position: relative;
-      border: 2px solid transparent;
-      background-repeat: no-repeat;
-      background-size: 50%;
-      background-position: center;
-      
+  .card-placeholder {
+    flex: 1 0 30%;
+    height: 129px;
+    position: relative;
+    border: 2px solid $light-grey;
+    background-repeat: no-repeat;
+    background-size: 50%;
+    background-position: center;
 
-  
-      .checkmark {
-        position: absolute;
-        top: 8px;
-        left: 8px;
-        font-size: 20px;
-        color: #4caf50; 
-      }
+    .checkmark {
+      position: absolute;
+      top: 8px;
+      left: 8px;
+      font-size: 20px;
     }
   }
-  
-  
+}
